kubernetes/overlays/infrastructure/svc/applications/dex/config/ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    #    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: dex.svc.k8s.ashman.world
    http:
      paths:
      - backend:
          service:
            name: dex
            port:
              number: 5554
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - "dex.svc.k8s.ashman.world"
    secretName: dex-ingress-tls
